# gordverb

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  clang-format.sh
src/: CMakeLists.txt  adverb.cpp  adverb.h  gordverb.cpp  gordverb.h  reverb_interface.h
src/early_reflections/: er_convolution.cpp  er_convolution.h
src/late_reflections/: lr_costello.cpp  lr_costello.h
submodules/: .clang-format
tests/: CMakeLists.txt  test_reverb.cpp
